plugins/traefik/e2e/kubernetes/manifests/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: whoami-deployment
  labels:
    app: whoami
    sablier.enable: "true"
    sablier.group: "E2E"
spec:
  replicas: 0
  selector:
    matchLabels:
      app: whoami
  template:
    metadata:
      labels:
        app: whoami
    spec:
      containers:
      - name: whoami
        image: acouvreur/whoami:v1.10.2
        livenessProbe:
          httpGet:
            path: /health
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: whoami-service
spec:
  ports:
  - name: http
    targetPort: 80
    port: 80
  selector:
    app: whoami
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: dynamic
  namespace: default
spec:
  plugin:
    sablier:
      names: deployment_default_whoami-deployment_1
      sablierUrl: 'http://sablier:10000'
      sessionDuration: 1m
      dynamic:
        displayName: 'Dynamic Whoami'
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: blocking
  namespace: default
spec:
  plugin:
    sablier:
      names: deployment_default_whoami-deployment_1
      sablierUrl: 'http://sablier:10000'
      sessionDuration: 1m
      blocking:
        timeout: 30s

---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: multiple
  namespace: default
spec:
  plugin:
    sablier:
      names: deployment_default_whoami-deployment_1,deployment_default_nginx-deployment_1
      sablierUrl: 'http://sablier:10000'
      sessionDuration: 1m
      dynamic:
        displayName: 'Multiple Whoami'
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: group
  namespace: default
spec:
  plugin:
    sablier:
      group: E2E
      sablierUrl: 'http://sablier:10000'
      sessionDuration: 1m
      dynamic:
        displayName: 'Group E2E'
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: whoami-dynamic-ingress
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
    traefik.ingress.kubernetes.io/router.middlewares: default-dynamic@kubernetescrd
spec:
  rules:
  - host: localhost
    http:
      paths:
      - path: /dynamic/whoami
        pathType: Prefix
        backend:
          service:
            name: whoami-service
            port:
              number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: whoami-blocking-ingress
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
    traefik.ingress.kubernetes.io/router.middlewares: default-blocking@kubernetescrd
spec:
  rules:
  - host: localhost
    http:
      paths:
      - path: /blocking/whoami
        pathType: Prefix
        backend:
          service:
            name: whoami-service
            port:
              number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: whoami-multiple-ingress
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
    traefik.ingress.kubernetes.io/router.middlewares: default-multiple@kubernetescrd
spec:
  rules:
  - host: localhost
    http:
      paths:
      - path: /multiple/whoami
        pathType: Prefix
        backend:
          service:
            name: whoami-service
            port:
              number: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  labels:
    app: nginx
    sablier.enable: "true"
    sablier.group: "E2E"
spec:
  replicas: 0
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:1.29.2
        livenessProbe:
          exec:
            command:
              - curl
              - -f
              - http://localhost
          initialDelaySeconds: 5
          periodSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  ports:
  - name: http
    targetPort: 80
    port: 80
  selector:
    app: nginx
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: healthy
  namespace: default
spec:
  plugin:
    sablier:
      names: deployment_default_nginx-deployment_1
      sablierUrl: 'http://sablier:10000'
      sessionDuration: 1m
      dynamic:
        displayName: 'Healthy Nginx'
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-multiple-ingress
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
    traefik.ingress.kubernetes.io/router.middlewares: default-multiple@kubernetescrd
spec:
  rules:
  - host: localhost
    http:
      paths:
      - path: /multiple/nginx
        pathType: Prefix
        backend:
          service:
            name: nginx-service
            port:
              number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-healthy-ingress
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
    traefik.ingress.kubernetes.io/router.middlewares: default-healthy@kubernetescrd
spec:
  rules:
  - host: localhost
    http:
      paths:
      - path: /healthy/nginx
        pathType: Prefix
        backend:
          service:
            name: nginx-service
            port:
              number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: group-ingress
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
    traefik.ingress.kubernetes.io/router.middlewares: default-group@kubernetescrd
spec:
  rules:
    - host: localhost
      http:
        paths:
          - path: /group
            pathType: Prefix
            backend:
              service:
                name: whoami-service
                port:
                  number: 80
